# ZarrParallelCacher

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs_build.yml  tests.yml
assembler/: index.html
demo/: pseudo.py
docs/: assembler.md  index.md  region.md
region/: index.html
search/: search_index.json
testing/: breaker.py
zarr_parallel/: __init__.py  assembler.py  dask_worker.py  dataset.py  region.py  slurm.py  task_container.py  transforms.py  utils.py
zarr_parallel/tests/: basic.py  consistency.py  series.py  tiled.py  transf_ds.py
