[project]
name = "zarr-parallel"
version = "0.1.0"
description = "Package for efficiently parallelising zarr write operations based on awareness of source chunks"
authors = [
    {name = "Daniel Westwood",email = "daniel.westwood@stfc.ac.uk"}
]
license = {text = "BSD 3"}
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "xarray (>=2026.2.0,<2027.0.0)",
    "zarr (>=3.1.5,<4.0.0)",
    "kerchunk (>=0.2.9,<0.3.0)",
    "requests (>=2.32.5,<3.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "dask (>=2026.1.2,<2027.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
region_write = "zarr_parallel.region:main"
[dependency-groups]
dev = [
    "isort (>=7.0.0,<8.0.0)"
]
